tests/paczka1/fuzzy1/75832641.err
Error in line 2: 1XTo S429 23,6
Error in line 7: S429 S697 -3,3
Error in line 4: WYYoMd S182 757,4
Error in line 8: WYYoMd S181 357,4
Error in line 10: i5mC3 S429 60,4
Error in line 1: S429 S697 89,7
Error in line 14: S429 A525 82,3
Error in line 11: WYYoMd A525 18,3
Error in line 24: S429 A525 49,7
